# fastapi-pg-copilot-apprunner

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test.db
.github/workflows/: python-publish.yml
backend/: Dockerfile  alembic.ini  db.py  main.py
backend/migrations/: env.py
backend/migrations/versions/: 13f302df9ffc_create_table.py  60bbfad1bc8f_create_table.py
backend/models/: __init__.py  note.py  user.py
backend/routers/: note.py  root.py
backend/schemas/: note.py
copilot/: .workspace  buildspec.yml  pipeline.yml
copilot/fpca-svc/: manifest.yml
copilot/fpca-svc/addons/: fpca-svc-cluster.yml
tests/: test_main.py
