[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
SQLAlchemy = "^1.4.27"
databases = "^0.5.3"
uvicorn = "^0.15.0"
asyncpg = "^0.25.0"
psycopg2 = "^2.9.2"
alembic = "^1.7.5"
httpx = "^0.21.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-asyncio = "^0.16.0"
aiosqlite = "^0.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
